# oxisat

./: Cargo.toml
oxisat/: Cargo.toml
oxisat-cli/: Cargo.toml
oxisat-cli/src/: main.rs
oxisat-fuzz/: Cargo.toml
oxisat-fuzz/src/: main.rs
oxisat/benches/: dpll_small.rs
oxisat/src/: cnf.rs  dimacs.rs  dpll.rs  lib.rs  preprocessing.rs  sat.rs
oxisat/src/cdcl/: branching.rs  implementation.rs  mod.rs  state.rs  stats.rs  tests.rs  watched_literals.rs
oxisat/src/dpll/: clause_mapping.rs  cnf_transforming.rs  mod.rs  preprocessing.rs  state.rs  stats.rs  tests.rs  watched_literals.rs
oxisat/tests/cnf/cadical/: README.md
tools/formula2cnf/: Cargo.toml
tools/formula2cnf/src/: main.rs  nnf.rs
