[package]
name = "oxisat-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxisat = { path = "../oxisat" }
anyhow = "1.0.55"
nom = "7.1.0"
clap = { version = "3.1.2", features = ["derive"] }
colored = "2.0.0"
comfy-table = "5.0.1"
rand = "0.8.5"