[package]
name = "oxisat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
static_assertions = "1.1.0"
itertools = "0.10.3"
rand = "0.8.5"
rand_pcg = "0.3.1"

[dev-dependencies]
criterion = "0.3"
generic-tests = "0.1.2"

[[bench]]
name = "dpll_small"
harness = false